--- a/eltn_environment.yml
+++ b/eltn_environment.yml
@@ -1,4 +1,6 @@
 name: eltn
+
+
 channels:
   - conda-forge
   - defaults
@@ -6,12 +8,14 @@ channels:
 dependencies:
   - dbt-bigquery=1.9.1
   - dbt-core=1.9.6
-  - great-expectations=1.4.1
   - matplotlib=3.10.0
   - pandas=2.1.4
   - pip=25.1
   - python=3.10.18
   - requests=2.32.3
+  # GX Core 1.x
+  - great-expectations==1.9.1  # latest 1.x release (stable)
+
   - pip:
       - meltano==3.7.8
 prefix: /opt/miniconda3/envs/elt
